[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Deck.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SlotAreaCaatinga.gd" type="Script" id=3]
[ext_resource path="res://Assets/bg/bg.png" type="Texture" id=4]
[ext_resource path="res://Scenes/SlotAreaAmazonia.gd" type="Script" id=5]
[ext_resource path="res://Scenes/SlotAreaPantanal.gd" type="Script" id=6]
[ext_resource path="res://Scenes/SlotAreaAtlantica.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 307, 145 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="SlotAreaCaatinga" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotAreaCaatinga"]
position = Vector2( 597, 537 )
shape = SubResource( 1 )

[node name="Slot0" type="Node2D" parent="SlotAreaCaatinga"]
position = Vector2( 810, 533 )

[node name="Slot1" type="Node2D" parent="SlotAreaCaatinga"]
position = Vector2( 661, 533 )

[node name="Slot2" type="Node2D" parent="SlotAreaCaatinga"]
position = Vector2( 523, 533 )

[node name="Slot3" type="Node2D" parent="SlotAreaCaatinga"]
position = Vector2( 382, 533 )

[node name="SlotAreaAmazonia" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotAreaAmazonia"]
position = Vector2( 597, 219 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Slot0" type="Node2D" parent="SlotAreaAmazonia"]
position = Vector2( 810, 215 )

[node name="Slot1" type="Node2D" parent="SlotAreaAmazonia"]
position = Vector2( 661, 215 )

[node name="Slot2" type="Node2D" parent="SlotAreaAmazonia"]
position = Vector2( 523, 215 )

[node name="Slot3" type="Node2D" parent="SlotAreaAmazonia"]
position = Vector2( 382, 215 )

[node name="SlotAreaAtlantica" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotAreaAtlantica"]
position = Vector2( 1420, 219 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Slot0" type="Node2D" parent="SlotAreaAtlantica"]
position = Vector2( 1633, 215 )

[node name="Slot1" type="Node2D" parent="SlotAreaAtlantica"]
position = Vector2( 1484, 215 )

[node name="Slot2" type="Node2D" parent="SlotAreaAtlantica"]
position = Vector2( 1346, 215 )

[node name="Slot3" type="Node2D" parent="SlotAreaAtlantica"]
position = Vector2( 1205, 215 )

[node name="SlotAreaPantanal" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotAreaPantanal"]
position = Vector2( 1420, 537 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Slot0" type="Node2D" parent="SlotAreaPantanal"]
position = Vector2( 1633, 533 )

[node name="Slot1" type="Node2D" parent="SlotAreaPantanal"]
position = Vector2( 1484, 533 )

[node name="Slot2" type="Node2D" parent="SlotAreaPantanal"]
position = Vector2( 1346, 533 )

[node name="Slot3" type="Node2D" parent="SlotAreaPantanal"]
position = Vector2( 1205, 533 )

[node name="Deck&Hand" parent="." instance=ExtResource( 1 )]
margin_top = 1.0
margin_bottom = 1.0

[connection signal="mouse_entered" from="SlotAreaCaatinga" to="SlotAreaCaatinga" method="_on_SlotAreaCaatinga_mouse_entered"]
[connection signal="mouse_exited" from="SlotAreaCaatinga" to="SlotAreaCaatinga" method="_on_SlotAreaCaatinga_mouse_exited"]
[connection signal="mouse_entered" from="SlotAreaAmazonia" to="SlotAreaAmazonia" method="_on_SlotAreaCaatinga_mouse_entered"]
[connection signal="mouse_exited" from="SlotAreaAmazonia" to="SlotAreaAmazonia" method="_on_SlotAreaCaatinga_mouse_exited"]
[connection signal="mouse_entered" from="SlotAreaAtlantica" to="SlotAreaAtlantica" method="_on_SlotAreaCaatinga_mouse_entered"]
[connection signal="mouse_exited" from="SlotAreaAtlantica" to="SlotAreaAtlantica" method="_on_SlotAreaCaatinga_mouse_exited"]
[connection signal="mouse_entered" from="SlotAreaPantanal" to="SlotAreaPantanal" method="_on_SlotAreaCaatinga_mouse_entered"]
[connection signal="mouse_exited" from="SlotAreaPantanal" to="SlotAreaPantanal" method="_on_SlotAreaCaatinga_mouse_exited"]
